--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,34 @@
+# ===============================
+# = DATA SOURCE
+# ===============================
+#url application
 
+# ===============================
+# Set here configurations for the database connection
+spring.datasource.url=jdbc:postgresql://localhost:5432/entity_graph
+spring.datasource.username=postgres
+spring.datasource.password=Mdp@2019
+spring.datasource.platform=postgres
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.main.allow-bean-definition-overriding=true
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
+# Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
+# schema will be automatically created afresh for every start of application
+# Show or not log for each sql query
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.SQL=debug
+#show sql values
+#logging.level.org.hibernate.type.descriptor.sql=trace
+
+# Naming strategy
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+spring.jpa.properties.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
+spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jackson.serialization.fail-on-empty-beans=false
